# Visomics

./: CMakeLists.txt  SuperBuild.cmake
AnalysisServer/: CMakeLists.txt  RemoteAnalysis.proto  voAnalysisServer.cpp  voAnalysisServer.h  voRemoteAnalysisService.cpp  voRemoteAnalysisService.h
AnalysisServer/visomics/vtk/: r.py  vtkwithexceptions.py
Application/: voRemoteAnalysisConnectionDialog.cpp
Application/Resources/UI/: voRemoteAnalysisConnectionDialog.ui
Base/: CMakeLists.txt  voAnalysis.cpp  voAnalysis.h
Base/Analysis/: voCustomAnalysis.cpp  voRemoteCustomAnalysis.cpp  voRemoteCustomAnalysis.h
CMakeExternals/: ProtoCall.cmake  protobuf.cmake
scripts/: ANOVA.R  ANOVA.xml
